feat(Application): 구입한 물건의 개수 업데이트 기능 추가